--- a/tuav2/src/assets/css/reset.css
+++ b/tuav2/src/assets/css/reset.css
@@ -7,7 +7,9 @@ footer,header,hgroup,menu,nav,section,summary {
 ul {
     list-style:none;
 }
-
+body {
+    background-color: #000;
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
     content:'';
