--- a/tuav2/src/assets/css/reset.css
+++ b/tuav2/src/assets/css/reset.css
@@ -29,6 +29,8 @@ input, select {
 .f14{ font-size: 14px;}
 .f16{ font-size: 16px;}
 .f20{ font-size: 20px;}
+.f24{ font-size: 24px;}
+.f30{ font-size: 30px;}
 .fb{ font-weight: bold;}
 .fn{ font-weight: normal;}
 .t2{ text-indent: 2em;}
