--- a/tuav2/src/assets/css/reset.css
+++ b/tuav2/src/assets/css/reset.css
@@ -1,5 +1,5 @@
 
-*{ margin:0;padding:0;border:0; outline:0;font-size:100%;vertical-align:baseline;background:transparent;}
+*{ margin:0;padding:0;border:0; outline:0;font-size:100%;vertical-align:baseline;background:transparent;box-sizing:border-box;}
 article,aside,canvas,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section,summary {
     display:block;
